@@ -7,6 +7,7 @@ menu "Examples"
 
 source "$APPSDIR/examples/adc/Kconfig"
 source "$APPSDIR/examples/ajoystick/Kconfig"
+source "$APPSDIR/examples/alarm/Kconfig"
 source "$APPSDIR/examples/bastest/Kconfig"
 source "$APPSDIR/examples/bridge/Kconfig"
 source "$APPSDIR/examples/buttons/Kconfig"
